# zero2prod

./: Cargo.toml  configuration.yaml
.github/workflows/: general.yml
migrations/: 20240107205715_create_subscriptions_table.sql  20240302211457_create_subscriptions_table.sql
scripts/: init_db.sh  start_docker.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
